added slider so user can change grid size b/w 1 and 100

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <h3>Etch A Sketch</h3> 
+   <h3>Etch a Sketch</h3> 
    <div class="controls">
-        <p class="subtitle">Controls</p>
-        <button>test</button>
+        <input type="range" min="1" max = "100" value = "16" class="slider" onchange="onSlide()">
+        <label>16</label>
    </div>
    <div class="container">
         <!-- <div class="cell">1</div>
